fix: make buttons wrap

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ li:before {
     display: flex;
     gap: 8px;
     margin-top: 8px;
+    flex-wrap: wrap;
 }
 
 
